Frontend Mentor QR-Code-Component

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="./root/images/favicon-32x32.png"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,12 +18,12 @@
       rel="stylesheet"
     />
 
-    <link href="./css/index.css" rel="stylesheet" />
+    <link href="./root/css/index.css" rel="stylesheet" />
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
     <div class="qr-code">
-      <img src="images/image-qr-code.png" />
+      <img src="./root/images/image-qr-code.png" />
       <div class="content">
         <h3>Improve your front-end skills by building projects</h3>
         <p>
