Frontend Mentor QR-Code-Component

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
       rel="stylesheet"
     />
 
-    <link href="./root/css/_reset.css" rel="stylesheet" />
-    <link href="./root/css/_attribution.css" rel="stylesheet" />
-    <link href="./root/css/_qr-code.css" rel="stylesheet" />
+    <link href="./root/css/index.css" rel="stylesheet" />
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
