--- a/src/core/home/index.html
+++ b/src/core/home/index.html
@@ -1,3 +1,64 @@
-<main class="qr-code-wrapper">
-  <h1>Home Page</h1>
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
+  rel="stylesheet"
+/>
+
+<link href="src/core/home/main.css" rel="stylesheet" />
+
+<header>
+  <b>Frontend Mentor Challenges</b>
+</header>
+<!-- <nav>
+  <ul>
+    <li><a id="home" href="index.html?page=home">Home</a></li>
+    <li><a id="qr-code" href="index.html?page=qr-code">QR Code</a></li>
+    <li>
+      <a id="expenses-chart" href="index.html?page=expenses-chart"
+        >Expenses Chart</a
+      >
+    </li>
+  </ul>
+</nav> -->
+<main class="challenges">
+  <a id="qr-code" href="index.html?page=qr-code">
+    <img
+      src="src/core/qr-code/screenshot.png"
+      alt="QR code to frontendmentor.io"
+    />
+    <div class="content">
+      <h1>QR Code</h1>
+      <ul>
+        <li class="html">HTML</li>
+        <li class="css">CSS</li>
+        <li class="js">JS</li>
+      </ul>
+      <p class="newbie">NEWBIE</p>
+    </div>
+  </a>
+  <a id="expenses-chart" href="index.html?page=expenses-chart">
+    <img
+      src="src/core/expenses-chart/screenshot.png"
+      alt="QR code to frontendmentor.io"
+    />
+    <div class="content">
+      <h1>Expenses Chart</h1>
+      <ul>
+        <li class="html">HTML</li>
+        <li class="css">CSS</li>
+        <li class="js">JS</li>
+      </ul>
+      <p class="junior">JUNIOR</p>
+    </div>
+  </a>
 </main>
+
+<footer>
+  <div class="attribution">
+    Challenge by
+    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+      >Frontend Mentor</a
+    >. Coded by <a href="#">Peter Farber</a>.
+  </div>
+</footer>
