Completed Multi-Step-Form Challenge (MINUS MOBILE VIEW)

--- a/src/core/home/index.html
+++ b/src/core/home/index.html
@@ -52,6 +52,21 @@
       <p class="junior">JUNIOR</p>
     </div>
   </a>
+  <a id="multi-step-form" href="index.html?page=multi-step-form">
+    <img
+      src="src/core/multi-step-form/screenshot.png"
+      alt="QR code to frontendmentor.io"
+    />
+    <div class="content">
+      <h1>Multi Step Form</h1>
+      <ul>
+        <li class="html">HTML</li>
+        <li class="css">CSS</li>
+        <li class="js">JS</li>
+      </ul>
+      <p class="advanced">Advanced</p>
+    </div>
+  </a>
 </main>
 
 <footer>
